Refactor Google ID token validator PMD cleanup